Style improvement suggested by @MartinWitt